# stats-agent

./: .gitignore  CLAUDE.md  config.yaml  go.mod  go.sum  main.go  python_tool.go  tailwind.config.js
agent/: action_cache.go  agent.go  conversation_loop.go  dataset_mode.go  document_mode.go  execution_coordinator.go  history_helpers.go  llm.go  memory_manager.go  python.go  query_builder.go  response_handler.go  stream.go
config/: config.go  logger.go
database/: db.go  files.go  rag_documents.go
devstral-tune/: generate_prompts.py  generate_traces-GPT5.py  generate_traces-Gemini.py  generate_traces.py  pyproject.toml
docker/: .env  chat-template.jinja  docker-compose.yaml  executor.py  python.Dockerfile
docker/caddy/: Caddyfile  Dockerfile
docker/executor/: executor.py  python.Dockerfile
errors/: errors.go
graph/: aliases.go  edges.go  graph.go  metadata.go
llmclient/: client.go  tokenize.go
pdf/: types.go
prompts/: agent_system.txt  document_qa.txt  fact_summary.txt  pdf_key_facts.txt  prompts.go  searchable_summary.txt  summarize_memory.txt  title_generator.txt
python/: Dockerfile  docker-compose.yaml  executor.py
rag/: add_messages.go  async_storage.go  core.go  document_chunk.go  document_persist.go  document_prepare.go  embedding.go  fact_generation_test.go  pdf_storage.go  persistence.go  query.go  query_expand.go  query_hybrid.go  query_metadata.go  rag.go  repair.go  splitter.go  stat_metadata.go  state.go  summarize.go
tools/: python.go
utils/: files.go  validation.go
web/: cleanup_service.go  server.go
web/format/: format.go  (+2 more)
(+45 files in other folders)
