[project]
name = "devstral-tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "google-generativeai>=0.8.5",
    "lifelines>=0.30.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "pingouin>=0.5.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "xgboost>=3.0.5",
]
